auto-triage improvements: security improvements, sandbox updates, skill refinements (#15545)
* update @flue/cli and @flue/client to latest versions

* update @flue/cli and @flue/client to latest versions

* replace curl GitHub API calls with gh CLI in triage verify skill

* refine comment template formatting in triage comment skill

* add scope reference to skills

* test the github proxy

* update @flue/cli and @flue/client to latest

* add scope to comment skill

* remove hardcoded -R withastro/astro from verify skill gh commands

* add back github explicit trigger

* fetch full git history in triage workflow for git blame/log

* promote git blame to its own subsection in verify skill

* add analyze-github-action-logs skill

* update @flue packages and refactor triage workflow for new client API

* update @flue/cli and @flue/client packages, post comments via direct API call

* fix indentation in proxy config and markdown formatting in comment skill

* refactor label operations to use direct API calls instead of gh CLI

* add environment guide to AGENTS.md: prefer node over python for scripting

* improve AGENTS.md structure and add bgproc dependency

Reorganize AGENTS.md with clearer sections for monorepo guide, bgproc,
and agent-browser workflows. Add bgproc as a dev dependency for managing
long-running dev/preview servers.

* add note on list

* update @flue/cli to 0.0.40

* merge issue-opened.yml into issue-triage.yml workflow

* fix(astro-workflow): guard shell results with exitCode checks before JSON.parse

* update @flue/cli to 0.0.41

* update @flue/cli to 0.0.42 and @flue/client to 0.0.26

* update @flue/cli to 0.0.43 and @flue/client to 0.0.27

* split issue-labeled.yml into issue-needsrepro.yml and issue-wontfix.yml

* fix: add missing lsof/procps to Docker sandbox and fix bgproc instructions in AGENTS.md

* refactor: combine needs-repro workflows into a single file

* fix: use FREDKBOT_GITHUB_TOKEN with GITHUB_TOKEN fallback in issue-triage

* add knip

--- a/.flue/sandbox/Dockerfile
+++ b/.flue/sandbox/Dockerfile
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 # The slim image includes Node.js and npm but not git, curl, or wget.
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-       ca-certificates curl wget git \
+       ca-certificates curl wget git jq lsof procps \
     && rm -rf /var/lib/apt/lists/*
 
 # --- pnpm ---
@@ -44,13 +44,28 @@ RUN apt-get update \
     && chmod -R o+rx /opt/pw-browsers \
     && npm uninstall -g playwright
 
-# NOTE: gh CLI is intentionally NOT installed in the sandbox due to lack of tokens.
+# --- GitHub CLI (for read-only public repo operations without auth) ---
+RUN (type -p wget >/dev/null || (apt-get update && apt-get install wget -y)) \
+    && mkdir -p -m 755 /etc/apt/keyrings \
+    && out=$(mktemp) && wget -nv -O$out https://cli.github.com/packages/githubcli-archive-keyring.gpg \
+    && cat $out | tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null \
+    && chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" \
+       | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+    && apt-get update \
+    && apt-get install gh -y \
+    && rm -rf /var/lib/apt/lists/*
 
 # --- Compatibility fixes ---
 # Allow any directory as a git safe.directory. The host workspace is bind-mounted
 # at its original host path (e.g. /home/runner/work/astro/astro) and the container
 # runs as a non-root UID via --user, so git would otherwise refuse to operate.
 RUN git config --system --add safe.directory '*'
+
+# --- Global OpenCode rules for CI sessions ---
+# The flue CLI sets HOME=/tmp at runtime, so OpenCode reads global rules from
+# /tmp/.config/opencode/AGENTS.md. This injects CI-specific instructions.
+COPY .flue/sandbox/AGENTS.md /tmp/.config/opencode/AGENTS.md
 
 EXPOSE 48765
 
