--- a/.github/workflows/build-sandbox-image.yml
+++ b/.github/workflows/build-sandbox-image.yml
@@ -2,7 +2,7 @@ name: Build Sandbox Image
 
 on:
   push:
-    paths: ['.flue/Dockerfile.sandbox', '.github/workflows/build-sandbox-image.yml']
+    paths: ['.flue/sandbox/Dockerfile', '.flue/sandbox/AGENTS.md', '.github/workflows/build-sandbox-image.yml']
   workflow_dispatch:
 
 env:
@@ -31,10 +31,10 @@ jobs:
       - uses: docker/build-push-action@10e90e3645eae34f1e60eeb005ba3a3d33f178e8 # v6.19.2
         with:
           context: .
-          file: .flue/Dockerfile.sandbox
+          file: .flue/sandbox/Dockerfile
           push: true
           tags: |
             ${{ env.IMAGE }}:latest
-            ${{ env.IMAGE }}:${{ hashFiles('.flue/Dockerfile.sandbox') }}
+            ${{ env.IMAGE }}:${{ hashFiles('.flue/sandbox/Dockerfile', '.flue/sandbox/AGENTS.md') }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
