feat: add new experimental Rust compiler (#15543)
* feat: use the rust compiler

* fix: adjust for new compile preprocessStyle API

* fix: update for diagnostic shape

* feat: experimental flag

* fix: unrelated changes

* chore: lockfile

* fix: make tests pass on both compilers

* chore: docs

* chore: clean up

* Apply suggestions from code review

* fix: add tests and bump

* Update .changeset/rust-compiler-experimental.md

Co-authored-by: Sarah Rainsberger <5098874+sarah11918@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Yan <61414485+yanthomasdev@users.noreply.github.com>

---------

Co-authored-by: Sarah Rainsberger <5098874+sarah11918@users.noreply.github.com>
Co-authored-by: Yan <61414485+yanthomasdev@users.noreply.github.com>

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -32,6 +32,8 @@ minimumReleaseAge: 4320
 minimumReleaseAgeExclude:
   # TODO: remove once more stable
   - '@flue/*'
+  - '@astrojs/compiler-rs'
+  - '@astrojs/compiler-binding*'
 peerDependencyRules:
   allowAny:
     - 'astro'
