--- a/packages/astro/e2e/fixtures/actions-react-19/package.json
+++ b/packages/astro/e2e/fixtures/actions-react-19/package.json
@@ -10,7 +10,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/check": "^0.9.6",
+		"@astrojs/check": "workspace:*",
 		"@astrojs/db": "workspace:*",
     "@astrojs/node": "workspace:*",
 		"@astrojs/react": "workspace:*",
