chore: address publint suggestions (#15653)

--- a/packages/language-tools/yaml2ts/package.json
+++ b/packages/language-tools/yaml2ts/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/withastro/astro.git",
+    "url": "git+https://github.com/withastro/astro.git",
     "directory": "packages/language-tools/yaml2ts"
   },
   "type": "commonjs",
