--- a/packages/language-tools/astro-check/package.json
+++ b/packages/language-tools/astro-check/package.json
@@ -7,12 +7,13 @@
   "homepage": "https://github.com/withastro/astro/tree/main/packages/language-tools/astro-check",
   "repository": {
     "type": "git",
-    "url": "https://github.com/withastro/astro.git",
+    "url": "git+https://github.com/withastro/astro.git",
     "directory": "packages/language-tools/astro-check"
   },
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "bin": {
     "astro-check": "./bin/astro-check.js"
   },
