--- a/packages/language-tools/language-server/package.json
+++ b/packages/language-tools/language-server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/withastro/astro.git",
+    "url": "git+https://github.com/withastro/astro.git",
     "directory": "packages/language-tools/language-server"
   },
   "type": "commonjs",
