chore: skip installing Chromium in e2e test setup (#15641)
* stop installing chromium

* and firefox

* Revert "and firefox"

This reverts commit 63e75445b00897154c8501b1c2096b4f30b2cb1f.

---------

Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "test:smoke:docs": "turbo run build --filter=docs",
     "test:check-examples": "node ./scripts/smoke/check.js",
     "test:vite-ci": "cd packages/astro && pnpm run test:unit && pnpm run test:integration",
-    "test:e2e": "cd packages/astro && pnpm playwright install chromium firefox && pnpm run test:e2e",
-    "test:e2e:match": "cd packages/astro && pnpm playwright install chromium firefox && pnpm run test:e2e:match",
+    "test:e2e": "cd packages/astro && pnpm playwright install firefox && pnpm run test:e2e",
+    "test:e2e:match": "cd packages/astro && pnpm playwright install firefox && pnpm run test:e2e:match",
     "test:e2e:hosts": "turbo run test:hosted",
     "benchmark": "astro-benchmark",
     "lint": "biome lint && knip && eslint . --report-unused-disable-directives-severity=warn --concurrency=auto",
