chore: triage workflow improvements and dependency updates (#15710)
* Add 'Do not spawn tasks/sub-agents' to triage skill steps

* chore: add temp directory to pnpm workspace

* chore(deps): update @flue/cli and @flue/client to latest versions

* gitignore temp directory

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,6 +4,7 @@ packages:
   - 'examples/**/*'
   - 'triage/*'
   - 'smoke/**/*'
+  - 'temp/*'
   - 'scripts'
   - 'benchmark'
   - 'benchmark/packages/*'
